--- a/global-perspectives-project/templates/home.html
+++ b/global-perspectives-project/templates/home.html
@@ -42,7 +42,7 @@
         </section>
 
         <section class="links-section">
-            <h2>Project Resources</h2>
+            <h2>Resources</h2>
             <div class="links-grid">
                 <a href="https://drive.google.com/drive/folders/1bngvIsauxD77nSi_82QSgCU6SeC_rnKt" class="link-button" target="_blank" rel="noopener">
                     📁 Google Drive
