--- a/global-perspectives-project/templates/home.html
+++ b/global-perspectives-project/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Global Perspectives Project{% endblock %}
+{% block title %}Home -A Global Perspectives Project{% endblock %}
 
 {% block content %}
 <section class="hero">
@@ -32,11 +32,11 @@
                 </div>
                 <div class="team-member">
                     <h3>Shanzey - Interviews & Promotion</h3>
-                    <p>Conducts interviews, maintains our Instagram page, and promotes it. Contributes to secondary research by finding out about gig work's income levels and success stories.</p>
+                    <p>Conducts interviews, maintains our Instagram page and contributes to secondary research by finding out about gig workers and permanent employees income levels and success stories.</p>
                 </div>
                 <div class="team-member">
                     <h3>Farin - Research Compilation</h3>
-                    <p>Maintains the team diary by recording activities and progress made throughout the project, and is responsible for compiling and organizing secondary research to support our findings.</p>
+                    <p> Is responsible for compiling and organizing secondary research to support our findings while also conducting interviews.</p>
                 </div>
             </div>
         </section>
